--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -46,7 +46,7 @@ padding-right = 1
 
 module-margin = 1
 
-separator = |
+separator = 
 separator-foreground = ${colors.background}
 
 font-0 = Noto Sans:size=11;1
@@ -77,7 +77,7 @@ cursor-scroll = ns-resize
 ; https://polybar.readthedocs.io/en/stable/user/modules/tray.html
 [module/systray]
 type = internal/tray
-tray-forgground = #006400
+tray-foreground = #006400
 
 format-margin = 8pt
 tray-spacing = 8pt
