--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -21,7 +21,8 @@
 background = #282A2E
 background-alt = #373B41
 foreground = #EEEEEE
-primary = #006400
+; main colour change
+primary = #362D70
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
@@ -30,13 +31,13 @@ disabled = #707880
 width = 100%
 height = 24pt
 radius = 0
-bottom = true
+bottom = true 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3pt
+line-size = 1pt
 
 border-size = 0pt
 border-color = #00000000
@@ -77,10 +78,11 @@ cursor-scroll = ns-resize
 ; https://polybar.readthedocs.io/en/stable/user/modules/tray.html
 [module/systray]
 type = internal/tray
-tray-foreground = #006400
+; change colour
+tray-foreground = #362D70
 
-format-margin = 8pt
-tray-spacing = 8pt
+format-margin =2pt
+tray-spacing = 2pt
 
 [module/workspaces]
 type = internal/xworkspaces
@@ -126,7 +128,8 @@ format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+; label-muted = muted
+label-muted = "%{T1}%{T-} muted"
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
