--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -53,7 +53,7 @@ separator-foreground = ${colors.background}
 font-0 = Noto Sans:size=11;1
 font-1 = FontAwesome:style=Regular
 
-modules-left = rofi_launcher workspaces file terminal browser
+modules-left = menu workspaces file terminal browser
 modules-center = xwindow
 modules-right = pulseaudio systray date
 
@@ -203,14 +203,14 @@ exec = echo "%{F#2ECC71}%{F-}"
 click-left = alacritty
 interval = 5
 
-[module/rofi_launcher]
+[module/menu]
 type = custom/script
 exec = echo ""  ; Rocket icon from Font Awesome
-click-left = rofi -show drun  ; Command to launch rofi
+click-left = jgmenu_run
+click-right= rofi -show drun  ; Command to launch rofi
 interval = 0
 label-font = 1  ; Ensure this matches your Font Awesome font index
 label-padding = 0
-
 
 [settings]
 screenchange-reload = true
