--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -22,7 +22,7 @@ background = #282A2E
 background-alt = #373B41
 foreground = #EEEEEE
 ; main colour change
-primary = #362D70
+primary = #445F33
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
