--- a/airootfs/etc/skel/.config/gtk-3.0/settings.ini
+++ b/airootfs/etc/skel/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-theme-name=Adwaita-dark
-gtk-icon-theme-name=Arc
+gtk-icon-theme-name=Tela-circle-green-dark
 gtk-font-name=Sans 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
