Add Polywins script...

--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -30,16 +30,16 @@ disabled = #707880
 [bar/archbang]
 width = 100%
 height = 24pt
-radius = 0
+radius = 6
 bottom = true 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 1pt
+line-size = 0pt
 
-border-size = 0pt
+border-size = 3pt
 border-color = #00000000
 
 padding-left = 1
@@ -50,11 +50,11 @@ module-margin = 1
 separator = 
 separator-foreground = ${colors.background}
 
-font-0 = Noto Sans:size=11;1
-font-1 = FontAwesome:style=Regular
+font-0 = Noto Sans:size=11;3
+font-1 = FontAwesome:style=Regular;3
 
 modules-left = menu workspaces file terminal browser
-modules-center = xwindow
+modules-center = polywins
 modules-right = pulseaudio systray date
 
 cursor-click = pointer
@@ -211,6 +211,14 @@ click-right= rofi -show drun  ; Command to launch rofi
 interval = 0
 label-font = 1  ; Ensure this matches your Font Awesome font index
 label-padding = 0
+
+[module/polywins]
+type = custom/script
+exec = ~/AB_Scripts/polywins.sh 2>/dev/null
+format = <label>
+label = %output%
+label-padding = 1
+tail = true
 
 [settings]
 screenchange-reload = true
