Updated theme and mirrorlist option in installer

--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -22,7 +22,7 @@ background = #282A2E
 background-alt = #373B41
 foreground = #EEEEEE
 ; main colour change
-primary = #5C68A4
+primary = #316F2B
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
@@ -53,9 +53,9 @@ separator-foreground = ${colors.background}
 font-0 = Noto Sans:size=11;3
 font-1 = FontAwesome:style=Regular;3
 
-modules-left = menu workspaces file terminal browser
+modules-left = menu workspaces
 modules-center = polywins
-modules-right = pulseaudio systray date
+modules-right = browser file terminal pulseaudio systray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -199,13 +199,13 @@ interval = 5
 
 [module/terminal]
 type = custom/script
-exec = echo "%{F#2ECC71}%{F-}"
+exec = echo "%{F#316F2B}%{F-}"
 click-left = alacritty
 interval = 5
 
 [module/menu]
 type = custom/script
-exec = echo ""  ; Rocket icon from Font Awesome
+exec = echo "%{F#316F2B}%{F-}"  ; Rocket icon from Font Awesome
 click-left = rofi -show drun 
 click-right= 
 interval = 0
