Mostly colour changes, conky update, added i3, dmenu

--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -18,14 +18,15 @@
 ; modified bar for ArchBang by Mr Green [mrgreen@archbang.org]
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #EEEEEE
+background = #d90e0f06
+background-alt = #666956
+foreground = #c2c3c0
+foreground-alt = #0e0f06
 ; main colour change
-primary = #7B6E17
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+primary =  #9D8D31
+secondary = #79866E
+alert = #939065
+disabled = #c2c3c0
 
 [bar/archbang]
 width = 100%
@@ -53,9 +54,9 @@ separator-foreground = ${colors.background}
 font-0 = Noto Sans:size=11;3
 font-1 = FontAwesome:style=Regular;3
 
-modules-left =  workspaces menu browser file
-modules-center = polywins
-modules-right = pulseaudio date systray
+modules-left =  workspaces xwindow
+modules-center = date
+modules-right = rofi browser file pulseaudio systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -90,6 +91,7 @@ pin-workspaces = false
 format = <label-state>
 label-active = %name%
 label-active-background = ${colors.primary}
+label-active-foreground = ${colors.foreground-alt}
 label-active-underline= ${colors.primary}
 label-active-padding = 2
 
@@ -158,23 +160,6 @@ format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
-;[network-base]
-;type = internal/network
-;interval = 5
-;format-connected = <label-connected>
-;format-disconnected = <label-disconnected>
-;label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-;[module/wlan]
-;inherit = network-base
-;interface-type = wireless
-;label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-;[module/eth]
-;inherit = network-base
-;interface-type = wired
-;label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
 [module/date]
 type = internal/date
 interval = 1
@@ -187,7 +172,7 @@ label-foreground = ${colors.foreground}
 
 [module/browser]
 type = custom/script
-exec = echo "%{F#616E1F}%{F-}"
+exec = echo "%{F#79866E}%{F-}"
 click-left = firefox 
 interval = 5
 
@@ -203,22 +188,14 @@ exec = echo "%{F#316F2B}%{F-}"
 click-left = alacritty
 interval = 5
 
-[module/menu]
+[module/rofi]
 type = custom/script
-exec = echo "%{F#7B6E17}%{F-}"  ; Rocket icon from Font Awesome
+exec = echo "%{F#9D8D31}%{F-}"  ; Rocket icon from Font Awesome
 click-left = rofi -show drun 
 click-right= 
 interval = 0
 label-font = 1  ; Ensure this matches your Font Awesome font index
 label-padding = 0
-
-[module/polywins]
-type = custom/script
-exec = ~/AB_Scripts/polywins 2>/dev/null
-format = <label>
-label = %output%
-label-padding = 1
-tail = true
 
 [settings]
 screenchange-reload = true
