remove archinstall ref: profiledef.sh, xterm symlinik change date code back to dd/mm

--- a/pacman.conf
+++ b/pacman.conf
@@ -97,3 +97,7 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[nemesis_repo]
+SigLevel = Never
+Server = https://erikdubois.github.io/$repo/$arch
