fix sound issues and update os-release

--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -23,7 +23,7 @@ background-alt = #666956
 foreground = #c2c3c0
 foreground-alt = #0e0f06
 ; main colour change
-primary =  #9D8D31
+primary =  #466C34
 secondary = #79866E
 alert = #939065
 disabled = #c2c3c0
@@ -32,7 +32,7 @@ disabled = #c2c3c0
 width = 100%
 height = 22pt
 radius = 0
-bottom = false 
+bottom = true 
 ; dpi = 96
 
 background = ${colors.background}
@@ -54,9 +54,9 @@ separator-foreground = ${colors.background}
 font-0 = Noto Sans:size=11;3
 font-1 = FontAwesome:style=Regular;3
 
-modules-left =  workspaces xwindow
-modules-center = date
-modules-right = rofi browser file pulseaudio systray
+modules-left =  workspaces rofi browser terminal file 
+modules-center = xwindow 
+modules-right = date pulseaudio systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -172,25 +172,26 @@ label-foreground = ${colors.foreground}
 
 [module/browser]
 type = custom/script
-exec = echo "%{F#79866E}%{F-}"
+exec = echo "%{F#AC58AC}%{F-}"
 click-left = firefox 
 interval = 5
 
 [module/file]
 type = custom/script
-exec = echo "%{F#E3E9E9}%{F-}"
+exec = echo "%{F#747994}%{F-}"
 click-left = thunar
 interval = 5
 
 [module/terminal]
 type = custom/script
-exec = echo "%{F#316F2B}%{F-}"
+exec = echo "%{F#CCBAC1}%{F-}"
 click-left = alacritty
+click-right = setxkbmap gb; notify-send "Keyboard layout changed to GB"
 interval = 5
 
 [module/rofi]
 type = custom/script
-exec = echo "%{F#9D8D31}%{F-}"  ; Rocket icon from Font Awesome
+exec = echo "%{F#95A262}%{F-}"  ; Rocket icon from Font Awesome
 click-left = rofi -show drun 
 click-right= 
 interval = 0
