--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -3,9 +3,10 @@
 
 conky.config = {
     use_xft = true,
-    font = 'monospace:size=10',
+    font = 'DejaVu Sans:size=10',
     override_utf8_locale = true,
-
+    draw_shades = false,
+    draw_outline = false,
     update_interval = 1.0,
     double_buffer = true,
 
@@ -16,25 +17,25 @@ conky.config = {
 
     alignment = 'top_right',
     gap_x = 20,
-    gap_y = 50,
+    gap_y = 20,
 
     minimum_width = 280,
     maximum_width = 380,
     minimum_height = 300,
-    color1 = '#9D8D31',
+    default_color = '#FFFFFF',
+    color1 = '#000000',
 };
 
 conky.text = [[
-${color1}ArchBang Keybinds${hr 2}${color}
+${font DejaVu Sans:bold:size=10}${color1}ArchBang Keybinds${hr 2}${color}${font}
 Super + t --- Terminal
 Super + w --- Web Browser
 Super + f --- File Manager
 Super + e --- Editor
 Super + r --- Rofi
-Super + d --- Dmenu
 Super + g --- Guide
 
-${color1}Openbox Controls${hr 2}${color}
+${font DejaVu Sans:bold:size=10}${color1}Openbox Controls${hr 2}${color}${font}
 Super + Space --- Main Menu
 Super + q --- Close a window
 Super + [1-4] --- Desktop [1-4]
@@ -46,7 +47,7 @@ Super + Shift + Arrow Keys --- Window Snapping
 Super + a --- Workspace List
 Alt + Tab --- Window List
 
-${color1}Screenshots${hr 2}${color}
+${font DejaVu Sans:bold:size=10}${color1}Screenshots${hr 2}${color}${font}
 Print --- Whole Screen
 Print + Shift + Super --- Selected Area 
 Print + Super  --- Active Window
