--- a/airootfs/etc/skel/.config/conky/conky.conf
+++ b/airootfs/etc/skel/.config/conky/conky.conf
@@ -3,7 +3,7 @@
 
 conky.config = {
     use_xft = true,
-    font = 'DejaVu Sans:size=10',
+    font = 'DejaVu Sans:size=8',
     override_utf8_locale = true,
     draw_shades = false,
     draw_outline = false,
@@ -22,12 +22,13 @@ conky.config = {
     minimum_width = 280,
     maximum_width = 380,
     minimum_height = 300,
-    default_color = '#FFFFFF',
+    default_color = '#C2C3C0',
     color1 = '#000000',
 };
 
 conky.text = [[
-${font DejaVu Sans:bold:size=10}${color1}ArchBang Keybinds${hr 2}${color}${font}
+${font DejaVu Sans:bold:size=9}${color}ArchBANG Keybinds${hr 2}${color}${font}
+
 Super + t --- Terminal
 Super + w --- Web Browser
 Super + f --- File Manager
@@ -35,7 +36,8 @@ Super + e --- Editor
 Super + r --- Rofi
 Super + g --- Guide
 
-${font DejaVu Sans:bold:size=10}${color1}Openbox Controls${hr 2}${color}${font}
+${font DejaVu Sans:bold:size=9}${color}Openbox Controls${hr 2}${color}${font}
+
 Super + Space --- Main Menu
 Super + q --- Close a window
 Super + [1-4] --- Desktop [1-4]
@@ -47,7 +49,8 @@ Super + Shift + Arrow Keys --- Window Snapping
 Super + a --- Workspace List
 Alt + Tab --- Window List
 
-${font DejaVu Sans:bold:size=10}${color1}Screenshots${hr 2}${color}${font}
+${font DejaVu Sans:bold:size=9}${color}Screenshots${hr 2}${color}${font}
+
 Print --- Whole Screen
 Print + Shift + Super --- Selected Area 
 Print + Super  --- Active Window
