--- a/airootfs/etc/skel/.config/polybar/config.ini
+++ b/airootfs/etc/skel/.config/polybar/config.ini
@@ -23,7 +23,7 @@ background-alt = #666956
 foreground = #c2c3c0
 foreground-alt = #0e0f06
 ; main colour change
-primary =  #466C34
+primary =  #226030
 secondary = #79866E
 alert = #939065
 disabled = #c2c3c0
@@ -56,7 +56,7 @@ font-1 = FontAwesome:style=Regular;3
 
 modules-left =  workspaces rofi browser terminal file 
 modules-center = xwindow 
-modules-right = date pulseaudio systray
+modules-right = pulseaudio systray date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -91,7 +91,7 @@ pin-workspaces = false
 format = <label-state>
 label-active = %name%
 label-active-background = ${colors.primary}
-label-active-foreground = ${colors.foreground-alt}
+label-active-foreground = ${colors.foreground}
 label-active-underline= ${colors.primary}
 label-active-padding = 2
 
@@ -161,24 +161,34 @@ format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
 [module/date]
-type = internal/date
-interval = 1
 
-date = %H:%M
-date-alt = %d-%m-%Y %H:%M
-click-left = gsimplecal
-label = %date%
-label-foreground = ${colors.foreground}
+; Modified date module for ArchBANG
+type = internal/date
+
+; Seconds to sleep between updates
+interval = 1.0
+
+; Optional time format
+time = " %I:%M %P"
+
+time-alt = " %a, %d %b %Y"
+
+format = <label>
+format-background = ${colors.primary}
+format-padding = 2
+
+label =  %time%
+
 
 [module/browser]
 type = custom/script
-exec = echo "%{F#AC58AC}%{F-}"
+exec = echo "%{F#CC5500}%{F-}"
 click-left = firefox 
 interval = 5
 
 [module/file]
 type = custom/script
-exec = echo "%{F#747994}%{F-}"
+exec = echo "%{F#0077CC}%{F-}"
 click-left = thunar
 interval = 5
 
@@ -191,7 +201,7 @@ interval = 5
 
 [module/rofi]
 type = custom/script
-exec = echo "%{F#95A262}%{F-}"  ; Rocket icon from Font Awesome
+exec = echo "%{F#CCBB00}%{F-}"  ; Rocket icon from Font Awesome
 click-left = rofi -show drun 
 click-right= 
 interval = 0
